# AnomaLog

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
anomalog/: __init__.py  cache.py  dataset.py  datasets.py  fetch_data.py  io_utils.py  labels.py  main.py  presets.py  sequences.py  split_validation.py  type_hints.py
anomalog/_runtime/: __init__.py  models.py  services.py
anomalog/anomaly_label_reader/: __init__.py
anomalog/cache/: __init__.py  classes.py  core.py  files.py
anomalog/datasets/: dataset.py  io_utils.py
anomalog/datasets/parsers/: base.py  drain3.ini  parsers.py
anomalog/datasets/sources/: __init__.py  io_utils.py  local.py  remote_zip.py
anomalog/models/: base.py  features.py  metrics.py  naive_bayes.py  runner.py  sequences.py  sklearn_adapters.py  split.py
anomalog/parsers/: __init__.py  parsers.py
anomalog/parsers/structured/: __init__.py  contracts.py  dataset.py  parsers.py  registry.py
anomalog/parsers/template/: __init__.py  dataset.py  drain3.ini  parsers.py  registry.py
anomalog/representations/: __init__.py  core.py
anomalog/sources/: __init__.py  base.py  contracts.py  local.py  raw_dataset.py  remote_zip.py
anomalog/structured_parsers/: __init__.py  contracts.py  parsers.py  structured_dataset.py
anomalog/structured_parsers/parquet/: __init__.py  contracts.py  sink.py  writer_worker.py
anomalog/template_parsers/: __init__.py  parsers.py  templated_dataset.py
docs/: about.md  development.md  experiments.md  getting-started.md  index.md  pipeline-concepts.md  quickstart.md
docs/reference/: experiments.md  index.md  labels.md  parsers.md  presets.md  representations.md  sequences.md  sources.md  top-level.md
docs/source/: __init__.py  conf.py  index.md
docs/source/reference/: library.rst
docs/stylesheets/: extra.css
experiments/: README.md  __init__.py  config.py  config_loader.py  config_types.py  datasets.py  errors.py  main.py  results.py
experiments/analysis/: README.md
experiments/audit/: __init__.py  deepcase_audit.py  deeplog_data_audit.py
experiments/configs/datasets/: bgl_deeplog_paper_10pct_entry_stream_no_online.toml  bgl_deeplog_paper_1pct_normal_entry_stream_no_online.toml  bgl_entity.toml  bgl_entity_chronological.toml  bgl_entity_supervised.toml  hdfs_v1_deeplog_paper_entry100k_assign_first.toml  hdfs_v1_deeplog_paper_entry100k_split_partial.toml  hdfs_v1_entity_chronological.toml  hdfs_v1_entity_supervised.toml
experiments/configs/models/: deepcase_default.toml  deepcase_paper.toml  deeplog_bgl_paper_no_online.toml  deeplog_hdfs_paper_key_only.toml  naive_bayes_default.toml  river_multinomial_nb_default.toml  template_frequency_default.toml
experiments/configs/runs/: bgl_deepcase.toml  bgl_deeplog.toml  bgl_naive_bayes.toml  bgl_river_multinomial_nb.toml  bgl_template_frequency.toml  hdfs_v1_naive_bayes.toml
experiments/configs/sweeps/: bgl.toml  bgl_deepcase.toml  bgl_deepcase_event_level_extension.toml  bgl_deeplog.toml  bgl_deeplog_paper_10pct_entry_stream_no_online.toml  bgl_deeplog_paper_1pct_normal_entry_stream_no_online.toml  hdfs_v1.toml  hdfs_v1_deepcase.toml  hdfs_v1_deepcase_table_iv_prediction.toml  hdfs_v1_deeplog.toml  hdfs_v1_deeplog_paper_entry100k_assign_first.toml  hdfs_v1_deeplog_paper_entry100k_assign_first_full.toml  hdfs_v1_deeplog_paper_entry100k_split_partial.toml  hdfs_v1_deeplog_paper_entry100k_split_partial_key_only.toml
experiments/docs/: deepcase.md  deeplog.md
experiments/models/: __init__.py  base.py  evaluate.py  naive_bayes.py  next_event_metrics.py  progress.py  registry.py  river.py  template_frequency.py  torch_runtime.py
experiments/models/deepcase/: __init__.py  detector.py  shared.py
experiments/models/deeplog/: __init__.py  detector.py  key.py  shared.py
experiments/reports/: deepcase_reproduction_readiness.md  deeplog_hdfs_failure_analysis.md  deeplog_paper_reproduction_investigation.md  deeplog_reproduction_readiness.md
experiments/runners/: __init__.py  audit_deeplog_data.py  run_experiment.py
log_toolkit/: fetch_data.py  type_hints.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_bgl_pipeline.py  test_experiment_runner.py  test_experiment_runner_deepcase.py  test_experiment_runner_deeplog.py  test_experiment_runner_naive_bayes.py  test_experiment_runner_river_naive_bayes.py
tests/unit/: __init__.py  conftest.py  helpers.py  test_coverage_hook.py  test_dataset.py  test_deepcase.py  test_deeplog.py  test_deeplog_data_audit.py  test_evaluate.py  test_experiment_config.py  test_experiment_models.py  test_experiment_progress.py  test_experiment_results.py  test_experiment_runner.py  test_features.py  test_io_utils.py  test_torch_runtime.py
tests/unit/cache/: test_files.py  (+1 more)
(+36 files in other folders)
