[project]
name = "AnomaLog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "drain3",
    "logparser3>=1.0.4",
    "platformdirs>=4.5.1",
    "prefect>=3.6.15",
    "pyarrow>=23.0.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
docs = [
    "furo>=2025.12.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxext-opengraph>=0.13.0",
]

[tool.ruff.lint]
# select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
select = ['ALL']
ignore = ["TD", "FIX002", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "anomalog"

[tool.uv.sources]
# See https://github.com/logpai/Drain3/issues/98
drain3 = { git = "https://github.com/logpai/Drain3" }
