[project]
name = "anomalog"
version = "0.1.0"
authors = [
  {name = "Haren Samarasinghe", email = "haren.samarasinghe22@imperial.ac.uk"},
]
description = "Reproducible log anomaly detection pipelines, from raw logs to deterministic, template-mapped sequences"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "drain3",
    "logparser3>=1.0.4",
    "platformdirs>=4.5.1",
    "prefect>=3.6.15",
    "pyarrow>=23.0.0",
    "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/harens/AnomaLog"
Documentation = "https://harens.github.io/AnomaLog/"
Repository = "https://github.com/harens/AnomaLog"
Issues = "https://github.com/harens/AnomaLog/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.29",
]

[tool.ruff.lint]
# select = ["E", "F", "UP", "B", "SIM", "I", "ANN"]
select = ['ALL']
ignore = ["TD", "FIX002", "ERA001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[build-system]
requires = ["uv_build>=0.9.26,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "anomalog"

[tool.uv.sources]
# See https://github.com/logpai/Drain3/issues/98
drain3 = { git = "https://github.com/logpai/Drain3" }
